@@ -1,5 +1,5 @@
 AUX bsnes-makefile.patch 347 RMD160 a79599e9d37350f87f6f2a01f312fd65344edb6e SHA1 bc40522d8cdc2e9523fab9d2401e428701bfee28 SHA256 9102e9fd62426dfa1f4d2bd3041946e8e4ab19dd3e8b00d3ef0019e446f4e658
 DIST bsnes_v039.tar.bz2 459449 RMD160 ac36ef8584d165bd227d87896b54b3316a257328 SHA1 00eb78255d637057a5421b8416b90b54ef757a38 SHA256 04655f1ea7deb40526c471d89b65062504a9e758683ad215137159e1da779cbf
-EBUILD bsnes-0.039.ebuild 1812 RMD160 994c52df93ebeff81538586924a17b35dedbd8af SHA1 245c0ba7cb712b1daf2637748efc2bbcf273f4fe SHA256 190e7a16d66b6b3d3f24cd44693cc9b74e9ccb5d64378b1ceac4f55767befea8
-MISC ChangeLog 3082 RMD160 89b9b0f20c6554a509618c18cd406c5c678deb1d SHA1 7be9eae08bff04f26a95afa55cd7cd41a5eb1a57 SHA256 36301d729aa1c3d13c1b439ffb0b04ac148ccddcb0683e683e30167fa9214138
+EBUILD bsnes-0.039.ebuild 1806 RMD160 b0770f8e2c19ddf29080f85aa15ee5bbdfc41cf5 SHA1 8a2c3a095a7c8162e2aa92df402490fe12935c67 SHA256 aef50f010605a85ac4de8ad296d38c96c56434db0c0a5a1f3f8734bce77ff190
+MISC ChangeLog 3172 RMD160 971ed3b3a6c65f8d465452a43b1fe6998ad47462 SHA1 57318852c0820332d4ad1b1669d1f1359c308f99 SHA256 dd6a6396d418959b301dfed4687a35df52bfa3bdad4b615131d51fb7b97c9b25
 MISC metadata.xml 321 RMD160 de44cffee97e7e0051cdcd9ae3cbf94e8e665096 SHA1 c4b4bd609278a9e369e7d4cd64b12cf69691c821 SHA256 661c27bccddb27b064cf06c46015f901084aa4a7c8e956bdfa3a2d1183da84d5
