@@ -1,6 +1,9 @@
 # ChangeLog for games-emulation/bsnes
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 
+  17 Feb 2009; Michał Ziąbkowski <mziab@o2.pl> bsnes-0.039.ebuild:
+  Fixed libsdl dep.
+
   11 Feb 2009; Michał Ziąbkowski <mziab@o2.pl> bsnes-0.039.ebuild:
   Ported pkg_setup to confutils.
 
